# DictionaryQT

./: CMakeLists.txt  linkedlist.cpp  linkedlist.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
